Исправлена адаптивная верстка и другие комментарии первого ревью

--- a/index.html
+++ b/index.html
@@ -29,32 +29,30 @@
       </section>
       <!-- Here starts the Intro section -->
       <section class="intro">
-        <div class="intro__wrapper">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
-          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
-            — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-          <ul class="list">
-            <li class="list__text">Часовых поясов
-              <span class="list__numbers">11</span>
-            </li>
-            <li class="list__text">Объектов природного наследия ЮНЕСКО
-              <span class="list__numbers"> 12</span>
-            </li>
-            <li class="list__text">Объектов культурного наследия ЮНЕСКО
-              <span class="list__numbers">16</span>
-            </li>
-            <li class="list__text">Природных заповедников
-              <span class="list__numbers">105</span>
-            </li>
-            <li class="list__text">Аэропортов
-              <span class="list__numbers">241</span>
-            </li>
-          </ul>
-        </div>
+        <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
+          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
+          — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="list">
+          <li class="list__text">Часовых поясов
+            <span class="list__numbers">11</span>
+          </li>
+          <li class="list__text">Объектов природного наследия ЮНЕСКО
+            <span class="list__numbers"> 12</span>
+          </li>
+          <li class="list__text">Объектов культурного наследия ЮНЕСКО
+            <span class="list__numbers">16</span>
+          </li>
+          <li class="list__text">Природных заповедников
+            <span class="list__numbers">105</span>
+          </li>
+          <li class="list__text">Аэропортов
+            <span class="list__numbers">241</span>
+          </li>
+        </ul>
       </section>
       <!-- Here starts the Photo grid section -->
       <section class="photo-grid">
@@ -74,11 +72,11 @@
       </section>
       <!-- Here starts the Places section -->
       <section class="places">
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+            <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Фото Куршская коса">
           <div class="place__text-container">
@@ -90,12 +88,13 @@
               россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
               и запах стального, прохладного моря.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"
+              target="_blank">National
               Geographic</a>
           </div>
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Фото Кольский">
@@ -107,8 +106,8 @@
               Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
               накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -123,12 +122,12 @@
               всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
               равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+            <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Фото Зимний Байкал">
           <div class="place__text-container">
@@ -139,12 +138,12 @@
               как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен
               мировой рекорд — 197.011 км/ч.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+            <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Фото Карелия">
           <div class="place__text-container">
@@ -155,14 +154,14 @@
               девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от
               земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
-        </div>
+        </article>
       </section>
       <!-- Here starts the cover -->
       <section class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-            электричках.</p>
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие
+            от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
         </a>
 
 
@@ -173,23 +172,23 @@
       <nav class="footer__navigation">
         <ul class="footer__wrapper">
           <li class="footer__link-list">
-            <a class="footer__links" href="https://yandex.ru/maps">Карты</a>
+            <a class="footer__links" href="https://yandex.ru/maps" target="_blank">Карты</a>
           </li>
           <li class="footer__link-list">
-            <a class="footer__links" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__links" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
           </li>
           <li class="footer__link-list">
-            <a class="footer__links" href="https://rasp.yandex.ru">Расписание</a>
+            <a class="footer__links" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
           </li>
           <li class="footer__link-list">
-            <a class="footer__links" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__links" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
           </li>
           <li class="footer__link-list">
-            <a class="footer__links" href="https://travel.yandex.ru">Путешествия</a>
+            <a class="footer__links" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
           </li>
         </ul>
       </nav>
-      <p class="footer__copyright">&#169; 2022. Гурьянов Игорь</p>
+      <p class="footer__copyright">&copy; 2022. Гурьянов Игорь</p>
     </footer>
   </div>
 </body>
